logs/linotpadminclientgui.log
Listing '.'...
Listing './bin'...
Compiling './bin/glinotpadm.py'...
***   File "./bin/glinotpadm.py", line 77
    print "The yubico module python-yubico is not installed. You will not be able to enroll yubikeys"
                                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LinOTPAdminClientGUI-2.9.1.egg-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/linotpadminclientgui'...
Compiling './lib/python3.5/site-packages/linotpadminclientgui/etokenng.py'...
***   File "./lib/python3.5/site-packages/linotpadminclientgui/etokenng.py", line 236
    if self.debug: print "label: ", self.label
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/linotpadm'...
Listing './share/locale'...
Listing './share/locale/de'...
Listing './share/locale/de/LC_MESSAGES'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
